--- a/produtos.html
+++ b/produtos.html
@@ -92,8 +92,8 @@
             { name: "Doces Temáticos", price: 19.99, image: "https://images.unsplash.com/photo-1572860177022-8fad5d778cf6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=225&q=80", description: "Deliciosos doces com formatos de Halloween!" },
             { name: "Máscara de Vampiro", price: 29.99, image: "https://images.unsplash.com/photo-1604909052743-94e838986d24?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=225&q=80", description: "Mostre suas presas com esta máscara realista!" },
             { name: "Decoração de Teia de Aranha", price: 14.99, image: "https://images.unsplash.com/photo-1508361001413-7a9dca21d08a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=225&q=80", description: "Crie um ambiente assustador com essas teias!" },
-            { name: "Chapéu de Bruxa Luxo", price: 49.99, image: "https://images.unsplash.com/photo-1508732541958-96340000a92d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=225&q=80", description: "Complete seu look de bruxa com este chapéu elegante!" },
-            { name: "Caldeirão de Bruxa", price: 34.99, image: "https://images.unsplash.com/photo-1592842232655-e5d345cbc2d0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=225&q=80", description: "Prepare suas poções neste caldeirão autêntico!" }
+            { name: "Chapéu de Bruxa Luxo", price: 49.99, image: "https://images.unsplash.com/photo-1508732541958-96340000a92d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&h=225&q=80", description: "Complete seu look de bruxa com este chapéu elegante!" }
+            
         ];
 
         let cart = {};
